Updated Readme and small codes

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1099,10 +1099,22 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5103893461611291"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "y_pred = model.predict(X_test)"
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1143,8 +1155,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low_risk</th>\n",
-       "      <td>9683</td>\n",
-       "      <td>7435</td>\n",
+       "      <td>9679</td>\n",
+       "      <td>7439</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1153,7 +1165,7 @@
       "text/plain": [
        "                  Predicted High_risk  Predicted Low_risk\n",
        "Actual High_risk                   51                  36\n",
-       "Actual Low_risk                  9683                7435"
+       "Actual Low_risk                  9679                7439"
       ]
      },
      "execution_count": 22,
@@ -1214,16 +1226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'high_risk': 68460, 'low_risk': 62011})"
+       "Counter({'high_risk': 68458, 'low_risk': 62022})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,14 +1245,14 @@
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
     "from imblearn.combine import SMOTEENN\n",
     "\n",
-    "smote_enn = SMOTEENN(random_state=0)\n",
+    "smote_enn = SMOTEENN(random_state=1)\n",
     "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1261,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,16 +1274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6375241226214794"
+       "0.6571314325311932"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1315,13 +1327,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual High_risk</th>\n",
-       "      <td>61</td>\n",
-       "      <td>26</td>\n",
+       "      <td>64</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low_risk</th>\n",
-       "      <td>7294</td>\n",
-       "      <td>9824</td>\n",
+       "      <td>7213</td>\n",
+       "      <td>9905</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1329,11 +1341,11 @@
       ],
       "text/plain": [
        "                  Predicted High_risk  Predicted Low_risk\n",
-       "Actual High_risk                   61                  26\n",
-       "Actual Low_risk                  7294                9824"
+       "Actual High_risk                   64                  23\n",
+       "Actual Low_risk                  7213                9905"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1359,10 +1371,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.70      0.57      0.02      0.63      0.41        87\n",
-      "   low_risk       1.00      0.57      0.70      0.73      0.63      0.40     17118\n",
+      "  high_risk       0.01      0.74      0.58      0.02      0.65      0.43        87\n",
+      "   low_risk       1.00      0.58      0.74      0.73      0.65      0.42     17118\n",
       "\n",
-      "avg / total       0.99      0.57      0.70      0.72      0.63      0.40     17205\n",
+      "avg / total       0.99      0.58      0.73      0.73      0.65      0.42     17205\n",
       "\n"
      ]
     }
